# backend/internal/docs/swagger.json
@@ -546,62 +546,6 @@
                 }
             }
         },
-        "/item-requests/approve": {
-            "post": {
-                "security": [
-                    {
-                        "CookieAuth": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "ItemRequests"
-                ],
-                "summary": "Approve an item request (manager/admin only). Approving an item request deletes other unapproved requests for the same item.",
-                "parameters": [
-                    {
-                        "description": "Item request to approve",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_dto.ItemRequestIdentifierRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_dto.ItemRequest"
-                        }
-                    },
-                    "400": {
-                        "description": "invalid request",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_response.Error"
-                        }
-                    },
-                    "401": {
-                        "description": "not logged in",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_response.Error"
-                        }
-                    },
-                    "403": {
-                        "description": "forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_response.Error"
-                        }
-                    }
-                }
-            }
-        },
         "/item-requests/me": {
             "get": {
                 "security": [
@@ -699,57 +643,6 @@
                     },
                     "403": {
                         "description": "forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_response.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/item-requests/me/{item_id}": {
-            "get": {
-                "security": [
-                    {
-                        "CookieAuth": []
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "ItemRequests"
-                ],
-                "summary": "Get personal item request (that the logged in user created) by item ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Item ID",
-                        "name": "item_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_dto.ItemRequest"
-                        }
-                    },
-                    "400": {
-                        "description": "invalid item id",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_response.Error"
-                        }
-                    },
-                    "401": {
-                        "description": "not logged in",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_response.Error"
-                        }
-                    },
-                    "404": {
-                        "description": "not found",
                         "schema": {
                             "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_response.Error"
                         }
@@ -873,7 +766,7 @@
                 }
             }
         },
-        "/item-requests/{item_id}/{user_id}": {
+        "/item-requests/{user_id}/{item_id}": {
             "delete": {
                 "security": [
                     {
@@ -886,13 +779,18 @@
                 "summary": "Delete an item request (manager/admin only)",
                 "parameters": [
                     {
-                        "description": "Item request to delete",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_dto.ItemRequestIdentifierRequest"
-                        }
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Item ID",
+                        "name": "item_id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -919,6 +817,76 @@
                     },
                     "404": {
                         "description": "not found",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_response.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/item-requests/{user_id}/{item_id}/approve": {
+            "post": {
+                "security": [
+                    {
+                        "CookieAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ItemRequests"
+                ],
+                "summary": "Update an item request (manager/admin only). Approving an item request deletes other unapproved requests for the same item.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Item ID",
+                        "name": "item_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Fields to update",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_dto.ItemRequestUpdateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_dto.ItemRequest"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_response.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "not logged in",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_response.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "forbidden",
                         "schema": {
                             "$ref": "#/definitions/github_com_studentinovisad_popisomator_backend_internal_response.Error"
                         }
@@ -4157,21 +4125,6 @@
                 }
             }
         },
-        "github_com_studentinovisad_popisomator_backend_internal_dto.ItemRequestIdentifierRequest": {
-            "type": "object",
-            "required": [
-                "item_id",
-                "user_id"
-            ],
-            "properties": {
-                "item_id": {
-                    "type": "integer"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
         "github_com_studentinovisad_popisomator_backend_internal_dto.ItemRequestPreparationItem": {
             "type": "object",
             "properties": {
@@ -4274,6 +4227,21 @@
                 },
                 "user_name": {
                     "type": "string"
+                }
+            }
+        },
+        "github_com_studentinovisad_popisomator_backend_internal_dto.ItemRequestUpdateRequest": {
+            "type": "object",
+            "required": [
+                "status"
+            ],
+            "properties": {
+                "status": {
+                    "type": "string",
+                    "enum": [
+                        "requested",
+                        "approved"
+                    ]
                 }
             }
         },
